apps/kubernetes/k3s/apps/paperless-ngx/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.hughboi.vip`)
      kind: Rule
      services:
        - name: paperless-webserver
          port: 8000
  tls:
    secretName: hughboi-tls
